# Goods-Router-web

./: Cargo.toml
src/: auth.rs  main.rs
src/routes/: auth.rs
static/: index.html  index.js  login.js  style.css
