[package]
name = "web"
version = "0.1.0"
authors = ["Chrys Adams <foolsinabucket@gmail.com>"]
edition = "2018"




[dependencies]
db_connector = { path = "../db_connector" }

actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"

r2d2 = "0.8.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.12.1"
hmac = "0.7.1"
sha2 = "0.8.2"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.2"

dotenv = "0.15.0"
